--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,11 @@ __pycache__/
 # OS files
 .DS_Store
 Thumbs.db
+
+# Terraform
+terraform/.terraform/
+terraform/.terraform.lock.hcl
+terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
+terraform/*.tfvars
+terraform/.terraform.tfstate.lock.info
